--- a/landingpages/psg-neymar/style.css
+++ b/landingpages/psg-neymar/style.css
@@ -8,12 +8,17 @@
 }
 
 body{
-    background-image: url(img/fundo-neymar.png);
+    background-color: black;
+    font-family: 'Inter', sans-serif;
+}
+
+.bg-neymar{
+    background-image: url(imagens/fundo-neymar.png);
     height: 100vh;
     width: 100%;
     background-repeat: no-repeat;
     background-position: center;
-    font-family: 'Inter', sans-serif;
+    background-size: cover;
 }
 
 .cabecalho{
@@ -38,7 +43,9 @@ body{
         font-family:'Inter', sans-serif;
         font-size: 17px;
         font-weight: 400;
-        cursor: pointer;
+}
+.menu-item:hover{
+    text-decoration: underline;
 }
 
 .menu-button{
@@ -53,6 +60,7 @@ body{
     border: none;
     font-weight: 600;
     font-size: 15px;
+    cursor: pointer;
 }
 
 .menu-button > #registre{
@@ -63,6 +71,7 @@ body{
     font-size: 15px;
     padding: 12px 22px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .menu-button > #registre:hover {
@@ -104,6 +113,7 @@ body{
     font-size: 15px;
     padding: 12px 22px;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .conteudo-button:hover{
@@ -112,4 +122,43 @@ body{
     transition: 0.5s;
 }
 
+.placar {
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: center;
+    background-color: white;
+    font-family:'Inter', sans-serif ;
+}
 
+.time1{
+    height: 115px;
+    background-size: cover;
+}
+#time1{
+    padding: 10px;
+    font-size: 25px;
+    margin: 20px;
+}
+
+.numero-placar{
+    padding: 10px;
+    font-size:50px;
+    margin: 15px;
+}
+
+.traco-placar{
+    color: rgba(0, 0, 0, 0.288);
+    font-size: 60px;
+    font-weight: bolder;
+}
+
+.time2{
+    height: 140px;
+}
+#time2{
+    padding: 20px;
+    font-size: 25px;
+    margin: 20px;
+}
