--- a/landingpages/psg-neymar/style.css
+++ b/landingpages/psg-neymar/style.css
@@ -162,3 +162,51 @@ body{
     font-size: 25px;
     margin: 20px;
 }
+
+.imagen-artigo{
+    background-image: url(imagens/fundo02.png);
+    height: 100vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.fundo-artigo{
+    background-color: white;
+    width: 800px;
+    height: 300px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 30px;
+    
+}
+
+.titulo-artigo{
+   border-left: 5px solid #DA2535;
+}
+
+.artigo{
+    padding-top: 20px;
+    text-align: justify;
+    font-weight: 500;
+}
+
+.botao-artigo{
+    border: none;
+    background-color: transparent;
+    color: #DA2535;
+    font-weight: bold;
+    font-size: 15px;
+    position: absolute;
+    top: 90%;
+    left: 4%;
+    cursor: pointer;
+}
+
+
+
+
