--- a/landingpages/psg-neymar/style.css
+++ b/landingpages/psg-neymar/style.css
@@ -230,7 +230,7 @@ body{
     justify-content: center;
 }
 
-.cards img{
+.cards{
     width: 300px;
     height: 254px;
     padding: 50px 10px 0px;
