--- a/landingpages/marketingJuan/style.css
+++ b/landingpages/marketingJuan/style.css
@@ -61,6 +61,7 @@ body{
 
 .container{
     padding-top: 100px;
+    padding-bottom: 500px;
     display: flex;
     width: 100%;
     height: 100vh;
@@ -70,7 +71,8 @@ body{
 
 .cards{
     max-width: 300px;
-    height: 150px;  
+    height: 150px;
+      
 }
 
 #img3{
