--- a/to-do-list/style.css
+++ b/to-do-list/style.css
@@ -64,6 +64,7 @@ body {
 }
 .trash{
     padding: 10px;
+    cursor: pointer;
 }
 
 .addToDo{
@@ -89,4 +90,6 @@ body {
     font-size: 1em;
 }
 
-
+.hidden{
+    display: none;
+}
